--- a/api-reference/endpoint/create.mdx
+++ b/api-reference/endpoint/create.mdx
@@ -8,6 +8,15 @@ description: "Signup a user to your mailing list"
 ```html cm.html
 <head>
   <script src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
+  
+  <!-- Add the Google Analytics tracking code here -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'GA_MEASUREMENT_ID');
+  </script>
 </head>
   
 <script type="module">
