--- a/api-reference/authentication.mdx
+++ b/api-reference/authentication.mdx
@@ -29,7 +29,7 @@ This token grants your a pass to use the Zymono Codemail services. If your token
 Codemail has measures in place to prevent spam of our email system.
 
 <AccordionGroup>
-  <Accordion title="Multiple Emails Per IP"
+  <Accordion title="Multiple Emails Per IP">
     We prevent to users from the same IP address from signing up in a row. (Another user has to signup to any Cdemail form on another IP to allow them to signup again)
     
     Unfortunately, at this time you cannot customize the verification message.
