--- a/api-reference/authentication.mdx
+++ b/api-reference/authentication.mdx
@@ -36,7 +36,7 @@ Codemail has measures in place to prevent spam of our email system.
   </Accordion>
 
 
-  <Accordion title="Email Verification"
+  <Accordion title="Email Verification">
     We send a verification message to every email that signs up on Codemail, if a user did not signup they can remove their account from your mailing list.
   </Accordion>
 </AccordionGroup>
