--- a/api-reference/authentication.mdx
+++ b/api-reference/authentication.mdx
@@ -31,6 +31,8 @@ Codemail has measures in place to prevent spam of our email system.
 <AccordionGroup>
   <Accordion title="Multiple Emails Per IP">
     We prevent two users from the same IP address signing up in a row. (Another user has to signup to any Cdemail form on another IP to allow them to signup again)
+    
+    If for some reason this is a problem contact support at: (inovate@code.mail.zymono.com)[mailto:inovate@code.mail.zymono.com]
   </Accordion>
 
 
