--- a/introduction.mdx
+++ b/introduction.mdx
@@ -3,32 +3,32 @@ title: Introduction
 description: "Welcome to your new Mintlify documentation. Get started making it yours."
 ---
 
-<img src="/images/banner.png" />
+<img src="/images/387shots_so.png" />
 
 ## Setting up
-The first step to world-class documentation is setting up your editing environnments. 
+The first step to a world-class mailing list is setting up your editing environnments. 
 <CardGroup cols={2}>
-  <Card title="Edit Your Docs" icon="pen-to-square" href="https://mintlify.com/docs/quickstart">
-    Get your docs set up locally for easy development.
+  <Card title="Edit The Code" icon="pen-to-square" href="/api-reference/endpoint/create">
+    Get your code set up locally for easy development.
   </Card>
-  <Card title="Preview Changes" icon="image" href="https://mintlify.com/docs/development">
+  <Card title="Preview Changes" icon="image" href="/api-reference/running">
     Preview your changes before you push to make sure they're perfect.
   </Card>
 </CardGroup>
 
 ## Make it yours
-Update your docs to your brand and add valuable content for the best user conversion. 
+Update your mailing list to your brand and add valuable content for the best user conversion. 
 <CardGroup cols={2}>
-  <Card title="Customize Style" icon="palette" href="https://mintlify.com/docs/settings/global" >
-    Customize your docs to your company's colors and brands.
+  <Card title="Customize Style" icon="palette" href="/api-reference/endpoint/signupcustomize" >
+    Customize your form to your company's colors and brands.
   </Card>
-  <Card title="Reference APIs" icon="code" href="https://mintlify.com/docs/api-playground/openapi" >
-    Automatically generate endpoints from an OpenAPI spec.
+  <Card title="Analytics" icon="code" href="/api-reference/analytics" >
+    Automatically generate analytics from a Google Analytics measurement id.
   </Card>
-  <Card title="Add Components" icon="screwdriver-wrench" href="https://mintlify.com/docs/components/accordion">
+  <Card title="Add Components" icon="screwdriver-wrench" href="/api-reference/components">
     Build interactive features and designs to guide your users.
   </Card>
-  <Card title="Get Inspiration" icon="stars" href="https://mintlify.com/showcase">
-    Check out our showcase of our favorite documentation. 
+  <Card title="Get Inspiration" icon="stars" href="/showcase">
+    Check out our showcase of our favorite mailing lists. 
   </Card>
 </CardGroup>
