--- a/api-reference/running.mdx
+++ b/api-reference/running.mdx
@@ -3,7 +3,7 @@ title: "Running"
 description: "How to run Codemail code"
 ---
 
-Codemail uses `html` and `js` as our main languages for API usage.
+Codemail uses `HTML` and `JavaScript` as our main languages for API usage.
 
 > You are not required to use these languages, these are just what we reccommend and support.
 
