--- a/features.mdx
+++ b/features.mdx
@@ -3,32 +3,26 @@ title: "Features"
 description: "This is where you can describe your product's features"
 ---
 
-Mintlify makes beautiful effortless documentation as easy as pushing to Git. With your new documentation, you get the following features built in:
+Codemail makes beautiful effortless mailing lists as easy as pushing to Git. With your new account, you get the following features built in:
 
 ## Optimized to Convert Users
 
 Everything is heavily optimized for SEO and conversion
 
-![Conversion](/images/conversion.png)
+![Conversion](https://i.imgur.com/pRLbBFt.png)
 
-## High-performing Search
+## High-performing Information
 
-Ultra-fast search comes out of the box and re-indexes all of the documentation on every update
+Ultra-fast IP detection, email verification and more
 
-![Search](/images/search.png)
+![Info](https://i.imgur.com/oRRZBNK.png)
 
-## Interactive API Playground
+## Simple Documentation
 
-Interactive API Playground pages for users to explore the endpoints
+Using Mintlify we provide simple and modern documentation
 
-![API Playground](/images/playground.png)
-
-## Light and Dark Mode
-
-Check out light and dark mode offered out of the box and beautiful for every bit of content and components
-
-![Light Mode](/images/light.png)
+![Docs](https://i.imgur.com/XLoiBh5.png)
 
 ## Analytics Built to Understand Users
 
-Analytics is built into the platform to help you understand what page users are interacting with, where they are converting, and where they are dropping off
+Analytics is built into the platform to help you understand what users are interacting with, where they are converting, and where they are dropping off
