--- a/api-reference/endpoint/create.mdx
+++ b/api-reference/endpoint/create.mdx
@@ -45,4 +45,6 @@ description: "Signup a user to your mailing list"
   URL for the user to be redirected to upon completion. (Enter `window.location` for no redirect)
 </ParamField>
 
+<Info>If you want the page to load faster you can import the sdk from `https://cdn.jsdelivr.net/npm/codemail@1.0.4/mail.js`. Please note, this will not always be up to date with the official sdk.</Info>
+
 Navigate back to https://codemail.zymono.com/dashboard/ to see and export your mailing list.
