--- a/api-reference/running.mdx
+++ b/api-reference/running.mdx
@@ -5,7 +5,7 @@ description: "How to run Codemail code"
 
 Codemail uses `HTML` and `JavaScript` as our main languages for API usage.
 
-> You are not required to use these languages, these are just what we reccommend and support.
+> You are not required to use these languages, these are just what we recommend and support.
 
 ```html
 <!DOCTYPE html>
@@ -13,7 +13,7 @@ Codemail uses `HTML` and `JavaScript` as our main languages for API usage.
  <body>
    <h1>Hello World!</h1>
    <p>This is a paragraph.</p>
-  /body>
+  </body>
 </html>
 ```
 
