--- a/api-reference/endpoint/create.mdx
+++ b/api-reference/endpoint/create.mdx
@@ -38,7 +38,7 @@ description: "Signup a user to your mailing list"
   Name that will be displayed for signups
 </ParamField>
 <ParamField path="REDIRECT_URL" type="URL">
-  URL for the user to be redirected to upon completion. (Enter `window.location` for no redirect)
+  URL for the user to be redirected to upon completion. (Enter `#` for no redirect)
 </ParamField>
 
 <Info>If you want the page to load faster you can import the sdk from `https://cdn.jsdelivr.net/npm/codemail@1.0.4/mail.js`. Please note, this will not always be up to date with the official sdk.</Info>
