--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,7 @@
 ---
 title: Introduction
 description: "Welcome to your new Mintlify documentation. Get started making it yours."
+icon: 'hand-wave'
 ---
 
 <img src="/images/387shots_so.png" />
