--- a/features.mdx
+++ b/features.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Features"
 description: "This is where you can describe your product's features"
+icon: 'code-pull-request'
 ---
 
 Codemail makes beautiful effortless mailing lists as easy as pushing to Git. With your new account, you get the following features built in:
