--- a/api-reference/authentication.mdx
+++ b/api-reference/authentication.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Authentication"
 description: "Authenticate requests to Codemail"
-icon: "security"
+icon: "shield-check"
 ---
 
 Codemail uses `Tokens` to identify developers. Access to this token can grant a user access to create forms on your behalf.
