--- a/api-reference/running.mdx
+++ b/api-reference/running.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Running"
 description: "How to run Codemail code"
+icon: "code"
 ---
 
 Codemail uses `HTML` and `JavaScript` as our main languages for API usage.
