--- a/api-reference/analytics.mdx
+++ b/api-reference/analytics.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Analytics"
 description: "Provide analytics through Google"
+icon: "chart-simple"
 ---
 
 Here is a modification of the default signup form with code for analytics.
