--- a/api-reference/endpoint/node.mdx
+++ b/api-reference/endpoint/node.mdx
@@ -1,6 +1,7 @@
 ---
 title: "NodeJS"
 description: "Signup a user to your mailing list in NodeJS"
+icon: "node-js"
 ---
 
 Install the Codemail NPM package by running `npm i codemail` in your terminal.
